[package]
name = "sound-visuals"
version = "0.1.0"
authors = ["John Doe <smthwnsn14@mail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hound = "3.5.0"

embedded-graphics = "0.7.1"
# make this depend on a feature flag
embedded-graphics-simulator = "0.4.0"