[package]
name = "sound-visuals"
version = "0.1.0"
authors = ["John Doe <smthwnsn14@mail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "3.0"
clap = { version = "3.2.20", features = ["cargo"] }

#hound = "3.5.0"

embedded-graphics= "0.7.1"
# make this depend on a feature flag
#embedded-graphics-simulator = "0.4.0"
rpi-led-matrix = {version = "0.4.0", features =["args"] }

